welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var max:Int
      ^max2Value:2: error: local variables must be initialized
  var max:Int
      ^max2Value:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var min:Int
      ^max2Value:3: error: local variables must be initialized
  var min:Int
      ^